--- a/responsive.css
+++ b/responsive.css
@@ -1,3 +1,98 @@
+:root {
+    --Very-dark-cyan: #00494d;
+    --Dark-grayish-cyan: #5e7a7d;
+    --Dark-grayish-cyan: #7f9c9f;
+    --Light-grayish-cyan: #c5e4e7;
+    --Very-Light-grayish-cyan: #f4fafa;
+    --White: #ffffff;
+    --color-1: #0D420D;
+    --color-2: #3DA538;
+    --color-3: #83CA9C;
+    --color-4: #C4E4B5;
+    --color-5: #F9EE6E;
+    --Montserrat: 'Montserrat', sans-serif;
+    --Raleway: 'Raleway', sans-serif;
+    --Space-Mono: 'Space Mono', monospace;
+}
+
+@media (max-width: 860px) {
+    .text {
+        font-size: 1rem;
+    }
+
+    .ist-img {
+        width: 300px;
+    }
+
+    .sty__res__left {
+        flex-direction: column-reverse;
+    }
+
+    .sty__res__right {
+        flex-direction: column;
+    }
+
+    .calc__nuemor__explain__box {
+        width: 100vw;
+    }
+
+    .calc__nuemor__heading {
+        margin: 2rem 0;
+        text-align: center;
+    }
+
+    .nuemor__style__container {
+        width: 90vw;
+    }
+
+    .button__box button {
+        width: 250px;
+        margin: 0.5rem auto;
+    }
+
+    .tip-calculator {
+        display: flex;
+        flex-direction: column;
+    }
+
+    .tc-one {
+        margin: auto;
+    }
+
+    .age__calc {
+        display: flex;
+        flex-direction: column;
+        text-align: center;
+    }
+
+    .numerical__box,
+    .gst__calc__box,
+    .bmi__calc__box {
+        text-align: center;
+        display: flex;
+        justify-content: center;
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .number_intake,
+    .price__select {
+        border: 0px;
+    }
+
+    .currency__calc__body .currency-row-outer .field.grid-50-50 {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        margin: 1rem 0;
+        grid-gap: 0;
+    }
+
+    .currency-converter .select {
+        width: 300px;
+    }
+}
+
 @media (max-width: 576px) {
     .dropdown-menu {
         background-color: rgb(33, 37, 41);
@@ -5,5 +100,30 @@
 
     .dropdown-menu li a {
         color: #fff;
+    }
+
+    .landing-page {
+        flex-direction: column;
+    }
+
+    .text {
+        width: 80vw;
+        padding: 0% !important;
+        text-align: center;
+    }
+
+    .ist-img {
+        margin: 0.8rem 0;
+        padding: 0.8rem 0;
+    }
+
+    .tc-one {
+        margin: unset;
+    }
+
+    .bill__input,
+    .tip_value_box,
+    .tip__box input:not([type="button"]) {
+        width: 80vw;
     }
 }
