--- a/style.css
+++ b/style.css
@@ -119,7 +119,7 @@ nav {
 }
 
 .nav-item a:not(.dropdown-menu li .dropdown-item) {
-    margin: 0 0.5rem;
+    /* margin: 0 0.2rem; */
     font-weight: 600;
     /* color: #ffffff !important; */
 }
@@ -168,11 +168,13 @@ nav {
     max-height: 100%;
 }
 
+
 /* ------------------------------------------------- */
 /*TIP CALCULATOR BODY */
 
 .tc-one {
-    width: 42vw;
+    /* width: 42vw; */
+    /* UNDER INVESTIGATION */
     padding: 1rem 1.4rem;
 }
 
@@ -376,7 +378,14 @@ nav {
     justify-content: space-evenly;
     align-items: center;
     padding: 1rem;
-    /* flex-direction: column; */
+    flex-direction: column;
+}
+
+.date__select__cont {
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    margin: 1rem 0;
 }
 
 .date__input {
@@ -387,9 +396,9 @@ nav {
     grid-area: three;
 }
 
-.r_ag_calctext_peron {
+/* .r_ag_calctext_peron {
     grid-area: four;
-}
+} */
 
 .data__output {
     grid-area: five;
@@ -406,12 +415,16 @@ nav {
     grid-template-areas:
         'one one'
         'two three'
-        'four four'
+        /* 'four four' */
         'five five';
 }
 
 .date__input select:first-child {
     font-size: 1rem;
+}
+
+.date__intake {
+    margin: 0 0.5rem;
 }
 
 .date__intake select,
